inserção do ponto final no numero

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 				</div>
 			</div>
 
-			<p class="m2-txt1 txt-center p-b-48">
-				Entre em contato conosco: <br>(44) 99831-3182</br>.
+			<p class="m2-txt1 txt-center p-b-48" id="whatsapp">
+				Entre em contato conosco: <br>(44) 99831-3182.</br>
 			</p>
 			
 		</div>
